fixing scroll-to-top bug on safari, improving pane 3 formatting including adding an axis, adjusting margins, and consolidating the header, updating pane numbers to include 'A' if relevant, decoupling subtitle on pane 3 from the others on pane 5, updating scale in pane 3B so it's distinct from the stacked area scale, adding year axis to pane 7

--- a/naturaldisasters/disaster-styles.css
+++ b/naturaldisasters/disaster-styles.css
@@ -399,7 +399,7 @@ g.annotations, .annotation-note-label {
   text-anchor: middle;
 }
 
-.subtitle.animationSubtitle { /* pane THREE */
+.animationSubtitle { /* pane THREE */
   text-anchor: start;
 }
 
@@ -410,8 +410,7 @@ g.annotations, .annotation-note-label {
 .qMark { /* pane THREE B */
   font-size: 5rem;
   font-family: 'Cabin Sketch', cursive;
-  fill: #3F3027;
-  opacity: 0.84;
+  fill: #5e5047;
   font-weight: 700;
 }
 
